[tool.poetry]
name = "ironlogapi"
version = "0.1.0"
description = ""
authors = ["Brian Stauff <brian.stauff@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
